--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="container">  
         
           <div class="navbar">
-              <a href="/faq">FAQ</a>
+              <a href="https://docs.betaprofiles.ml">Docs</a>
               <a style="padding-left: 10px;" href="https://twitter.com/betaprofilesml">Twitter</a>
 	      <a style="padding-left: 10px;" href="https://discord.gg/QSPVmfDUGS">Discord</a>
             </div>
