--- a/index.html
+++ b/index.html
@@ -114,17 +114,12 @@
       }
     }
   </style>
-  <script>
-    window.onload = function() {
-      alert("Please note that iOS 17 beta profiles are not and will never be available through this website - most likely only available through the iOS Settings app.");
-    };
-  </script>
 </head>
 <body>
   <div id="container">
     <h1>Welcome to <span style="color: #4CAF50;">betaprofiles.ml</span></h1>
     <p>Get access to the latest <strong>iOS</strong> and <strong>iPadOS</strong> beta profiles.</p>
-	<p>Please note that iOS 17 beta profiles are not and will never available through this website - most likely only available through the iOS Settings app.</p>
+	<p>Please note that iOS 17 beta profiles are not and will never be available through this website - most likely only available through the iOS Settings app.</p>
     <a class="button" href="http://betaprofiles.ml/profiles/iOS_16_Beta_Profile.mobileconfig">iOS 16</a>
     <a class="button" href="http://betaprofiles.ml/profiles/iOS_iPadOS_16_Beta_Profile.mobileconfig">iPadOS 16</a>
     <div id="links">
